#49 add translate for legal notice page + various style

--- a/client/partials/about.html
+++ b/client/partials/about.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <p>{{ 'ABOUT_PARA1' | translate }} <a href="http://data.imf.org/" target="_blanck">data.imf.org</a>{{ 'ABOUT_PARA11' | translate }} <a href="https://comtrade.un.org/" target="_blanck">comtrade.un.org</a>. {{ 'ABOUT_PARA111' | translate }}</p>
+      <p>{{ 'ABOUT_PARA1' | translate }} <a href="http://data.imf.org/" target="_blanck">data.imf.org</a>{{ 'ABOUT_PARA11' | translate }} <a href="https://comtrade.un.org/" target="_blanck">comtrade.un.org</a>. {{ 'ABOUT_PARA111' | translate }} (<a href="http://ricardo.hypotheses.org/" traget="_blanck">http://ricardo.hypotheses.org/</a>)</p>
     </div>
   </div>
 </div>
