--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 well">
       <h4>
         {{ 'WORLD_COMPARE_TITLE' | translate }} in
         <div class="inline-select">
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-12 well">
       <div class="timeline-cont">
         <h4>
           {{ 'WORLD_VIEW_TITLE' | translate }}
@@ -100,9 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-12">
-      <br>
-      <br>
+    <div class="col-sm-12 well">
       <h4> {{ 'WORLD_NB_REPORTINGS' | translate }}</h4>
       <bar-chart
         ng-data="nbReportings"
@@ -120,9 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12">
-      <br>
-      <br>
+    <div class="col-md-12 well">
       <h4 class="titleDualTL">
         {{ 'WORLD_COMPARAISON' | translate }}
         <div class="inline-select" >
