--- a/client/css/style.css
+++ b/client/css/style.css
@@ -47,7 +47,7 @@ html {
 body {
     font-family: 'Open Sans', 'Helvetica', sans-serif;
     background-color: #f5f5f5;
-    margin-bottom: 7.5em;
+    margin-bottom: 4em;
 }
 
 /* Responsive */
@@ -68,12 +68,12 @@ h5 {
 }
 
 h4.ng-binding {
-    margin-top: 2em;
+    /*margin-top: 2em;*/
 }
 
 footer {
     position: absolute;
-    bottom: -1em;
+    bottom: 0;
     width: 100%;
     height: 4em;
     background-color: #0c393f;
@@ -738,6 +738,96 @@ h2.title-border {
     .box-bg-metadata {
         margin-left: 0;
     }
+}
+
+/*
+ * List blog article
+ */
+
+.article-list {
+    margin-top: 1em;
+}
+
+.article-list.row {
+    /* column width */
+    -moz-column-width: 20em;
+    -webkit-column-width: 20em;
+
+    /* space between columns */
+    -moz-column-gap: 2em;
+    -webkit-column-gap: 2em;
+}
+
+.article-list span {
+    display: block;
+}
+
+article.item {
+    display: inline-block;
+    padding-top: 2em;
+    width: 100%;
+}
+
+.article-list a {
+    display: block;
+    position: relative;
+    padding: 2em;
+    background-color: #f5f5f5;
+    color: #333;
+    border-radius: 1.5em;
+    transition: all .35s ease-in-out;
+    transform: scale(1);
+}
+
+.article-list a:hover {
+    text-decoration: none;
+    transition: all .35s ease-in-out;
+    transform: scale(1.05);
+}
+
+.article-title {
+    margin-bottom: 1.5em;
+    padding-right: 4em;
+    font-family: 'montserrat', 'Arial', sans-serif;
+    font-weight: 600;
+    color: #1c747f;
+}
+
+.article-title:hover {
+    color: #1c747f;
+}
+
+.article-container-time {
+    position: absolute;
+    right: 0.3em;
+    top: -1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4em;
+    height: 4em;
+    padding: 1em;
+    background-color: #1c747f;
+    border-radius: 0.5em;
+    transform: rotate(-15deg);
+}
+
+.article-container-time time {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 4em;
+    height: 4em;
+    padding: 0;
+    margin-left: -0.8em;
+    margin-top: -1em;
+    font-size: 0.9em;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
+    font-weight: 300;
+    line-height: 1.2em;
+    color: white;
+    transform: rotate(15deg);
 }
 
 /*
