--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -59,8 +59,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <p class="paragraphPage">
+    <div class="col-sm-12 well">
       <h4>
         {{ 'BILATERAL_1' | translate }}
         <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities" analytics-on="click" analytics-event="Bilateral source" ></inline-select-country>
@@ -72,14 +71,11 @@
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup" ></inline-select-year>
         {{ 'BILATERAL_2' | translate }} {{entities.sourceEntity.selected.RICname}}
       </h4>
-      <br>
       <dual-timeline
         ng-data="timelineData"
         start-date="selectedMinDate"
         end-date="selectedMaxDate">
       </dual-timeline>
-    </div>
-    <div class="timeline-cont col-md-12">
       <div class="legend">
         <div class="legend-item">
           <div class="square import"></div>
@@ -101,8 +97,12 @@
           {{ 'CURRENCY' | translate }} <strong>{{actualCurrency}}</strong>
         </div>
       </div>
-      <br>
-      <br>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 well">
       <h4>{{ 'BILATERAL_BRUSH_1' | translate }} {{entities.sourceEntity.selected.RICname}} {{ 'AND' | translate}} {{entities.targetEntity.selected.RICname}} {{ 'BILATERAL_BRUSH_2' | translate }} </h4>
       <brushing-timeline
         ng-data="timelineData"
@@ -138,45 +138,46 @@
   </div>
 </div>
 <div class="container">
-<div class="row">
-  <div class="col-md-12">
-    <br>
-    <br>
-    <h4> {{ 'COMPARAISON_1' | translate }} {{entities.sourceEntity.selected.RICname}} {{ 'AND' | translate }} {{entities.targetEntity.selected.RICname}} {{ 'COMPARAISON_2' | translate }} </h4>
-    <p class="paragraphViz">
-      {{ 'COMPARISON_INTRO' | translate }}
-    </p>
-    <comparison-timeline
-      ng-data="timelineData"
-      start-date="selectedMinDate"
-      end-date="selectedMaxDate">
-    </comparison-timeline>
-    <div class="legend">
-      <div class="legend-item">
-        <strong>A</strong> reporting : {{entities.sourceEntity.selected.RICname}} | <strong>B</strong> partner : {{entities.targetEntity.selected.RICname}}
-        <br>
-        <br>
-        <span class="legendImport">Imp A <-B </span> = {{ 'COMPARAISON_LEG_1' | translate }}  | <span class="legendExport">Imp B <-A </span> = {{ 'COMPARAISON_LEG_2' | translate }}
-        <br>
-        <br>
-        <span class="legendImport">Exp B->A</span> = {{ 'COMPARAISON_LEG_3' | translate }}  | <span class="legendExport">Exp A->B</span> = {{ 'COMPARAISON_LEG_4' | translate }}
-      </div>
+  <div class="row">
+    <div class="col-sm-12 well">
+      <h4> {{ 'COMPARAISON_1' | translate }} {{entities.sourceEntity.selected.RICname}} {{ 'AND' | translate }} {{entities.targetEntity.selected.RICname}} {{ 'COMPARAISON_2' | translate }} </h4>
+      <p class="paragraphViz">
+        {{ 'COMPARISON_INTRO' | translate }}
+      </p>
+      <comparison-timeline
+        ng-data="timelineData"
+        start-date="selectedMinDate"
+        end-date="selectedMaxDate">
+      </comparison-timeline>
       <div class="legend">
-        <div class="legend-item" >
-          {{ 'MIRROR' | translate }}
-          <div class="line diff-import" style="margin-left:20px;"></div>
-          <strong>(Imp A <-B - Exp B->A) / Imp A <-B</strong>
+        <div class="legend-item">
+          <strong>A</strong> reporting : {{entities.sourceEntity.selected.RICname}} | <strong>B</strong> partner : {{entities.targetEntity.selected.RICname}}
+          <br>
+          <br>
+          <span class="legendImport">Imp A <-B </span> = {{ 'COMPARAISON_LEG_1' | translate }}  | <span class="legendExport">Imp B <-A </span> = {{ 'COMPARAISON_LEG_2' | translate }}
+          <br>
+          <br>
+          <span class="legendImport">Exp B->A</span> = {{ 'COMPARAISON_LEG_3' | translate }}  | <span class="legendExport">Exp A->B</span> = {{ 'COMPARAISON_LEG_4' | translate }}
         </div>
-        or
-        <div class="legend-item" style="margin-left:20px;">
-          <div class="line diff-export"></div>
-          <strong>(Exp A->B - Imp B <-A) / Exp A->B</strong>
+        <div class="legend">
+          <div class="legend-item" >
+            {{ 'MIRROR' | translate }}
+            <div class="line diff-import" style="margin-left:20px;"></div>
+            <strong>(Imp A <-B - Exp B->A) / Imp A <-B</strong>
+          </div>
+          or
+          <div class="legend-item" style="margin-left:20px;">
+            <div class="line diff-export"></div>
+            <strong>(Exp A->B - Imp B <-A) / Exp A->B</strong>
+          </div>
         </div>
+        <br>
+        <br>
       </div>
-      <br>
-      <br>
     </div>
   </div>
+</div>
+<div class="container">
   <div class="row">
     <div class="col-sm-12 text-center shdt">
       <div class="btn-group" role="group">
