--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 well">
+    <div class="col-sm-12 well">
       <h4 class="titleDualTL">
         {{ 'WORLD_COMPARAISON' | translate }}
         <div class="inline-select" >
@@ -166,16 +166,18 @@
            The percentages are based on the total amount of <a href="/#worldTrade"> world bestguess</a> of {{entities.sourceEntity.selected.RICname}}
         </p>
         </div> -->
-    </div>
-    <div class="col-md-12">
-      <div id="select-lineChart" >
-        <linechart-world
-          ng-data="linechartData"
-          currency="linechartCurrency"
-          start-date="selectedMinDate"
-          end-date="selectedMaxDate"
-          view="view">
-        </linechart-world>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="select-lineChart" >
+            <linechart-world
+              ng-data="linechartData"
+              currency="linechartCurrency"
+              start-date="selectedMinDate"
+              end-date="selectedMaxDate"
+              view="view">
+            </linechart-world>
+          </div>
+        </div>
       </div>
     </div>
     <div class="col-sm-12 text-center shdt">
