--- a/client/partials/about.html
+++ b/client/partials/about.html
@@ -19,6 +19,12 @@
       <h2 class="title-border">{{ 'TEAM_INTRO_TITLE' | translate }}</h2>
       <p>{{ 'TEAM_PARA1' | translate }}<br><br>{{ 'TEAM_PARA11' | translate }}</p>
     </div>
+    <div class="col-md-8 col-md-offset-2">
+      <div class="team-logotype">
+        <img ng-src="svg/sciences-po-medialab.svg" alt="Logotype SciencePo MEDIALAB" />
+        <img ng-src="svg/sciences-po-centre-histoire.svg" alt="Logotype SciencePo Centre d'histoire" />
+      </div>
+    </div>
   </div>
 </div>
 <div class="container">
@@ -55,6 +61,12 @@
         <li><strong>{{ 'COMMITTEE_NAMELIST9' | translate }}</strong> {{ 'COMMITTEE_LIST9' | translate }}</li>
         <li><strong>{{ 'COMMITTEE_NAMELIST10' | translate }}</strong> {{ 'COMMITTEE_LIST10' | translate }}</li>
       </ul>
+    </div>
+    <div class="col-md-8 col-md-offset-2">
+      <div class="logotype-anr">
+        <img ng-src="img/logotype-anr.png" alt="Logotype SciencePo MEDIALAB" class="pull-left" />
+        <span>{{ 'LOGOTYPE_ANR' | translate }}</span>
+      </div>
     </div>
   </div>
 </div>
