--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -9,7 +9,7 @@
       </button>
       <a class="navbar-brand" href="/">
         <span class="sr-only">RICardo</span>
-        <img ng-src="svg/logotype-ricardo.svg" />
+        <img ng-src="svg/logotype-ricardo.svg" alt="Logotype RICardo" />
         <span>RICardo</span>
       </a>
     </div>
