relative link to home

--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="./">
         <span class="sr-only">RICardo</span>
         <img ng-src="svg/logotype-ricardo.svg" alt="Logotype RICardo" />
         <span>RICardo</span>
