uniformizing World Federico Tena name without the - fixes #52

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -50,7 +50,7 @@
         </div>
         <div ng-hide="bilateral" class="legend-item">
           <div class="square federico"></div>
-          Federico-Tena database
+          Federico Tena database
         </div>
       </div>
       <number-flows
