--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -55,7 +55,7 @@
         </div>
         <div class="legend-item">
           <div class="square worldfederico"></div>
-          World Federico-Tena
+          World Federico Tena
         </div>
         <div class="legend-item">
           {{ 'CURRENCY' | translate }} <strong>pound sterling</strong>
