--- a/client/partials/glossary.html
+++ b/client/partials/glossary.html
@@ -36,8 +36,10 @@
         <ul id="worldTrade">
           <li><strong>{{ 'GLOSSARY_NAMELIST1' | translate }}</strong>{{ 'GLOSSARY_LIST1' | translate }}</li>
           <li><strong>{{ 'GLOSSARY_NAMELIST2' | translate }}</strong>{{ 'GLOSSARY_LIST2' | translate }}</li>
-          <li><strong>{{ 'GLOSSARY_NAMELIST3' | translate }}</strong>{{ 'GLOSSARY_LIST3' | translate }} <a href="http://www.ehes.org/EHES_93.pdf" target="_blank">“World trade, 1800-1938: a new data-set”, EHES Working paper 93</a> | <a href="http://www.ehes.org/WP%20Statistical%20Appendix%20tables%20(%202016)2.xlsx" target="_blank">Excel Data</a><br>{{ 'GLOSSARY_LIST33' | translate }}</li>
-          <li><strong>{{ 'GLOSSARY_NAMELIST4' | translate }}</strong>{{ 'GLOSSARY_LIST4' | translate }}<br>{{ 'GLOSSARY_LIST44' | translate }}</li>
+          <li><strong>{{ 'GLOSSARY_NAMELIST3' | translate }}</strong>{{ 'GLOSSARY_LIST3' | translate }}</li>
+          <li><strong>{{ 'GLOSSARY_NAMELIST4' | translate }}</strong>
+          {{ 'GLOSSARY_LIST4' | translate }}</li>
+          <li><strong>{{ 'GLOSSARY_NAMELIST5' | translate }}</strong>{{ 'GLOSSARY_LIST5' | translate }}<a href="http://www.ehes.org/EHES_93.pdf" target="_blank">“World trade, 1800-1938: a new data-set”, EHES Working paper 93</a> | <a href="http://www.ehes.org/WP%20Statistical%20Appendix%20tables%20(%202016)2.xlsx" target="_blank">Excel Data</a><br><br>{{ 'GLOSSARY_LIST44' | translate }}</li>
         </ul>
       </div>
       <dl class="well">
