--- a/client/partials/corpus.html
+++ b/client/partials/corpus.html
@@ -10,6 +10,7 @@
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'SOURCES_INTRO_TITLE' | translate }}</h2>
       <p>{{ 'SOURCES_PARA1' | translate }}</p>
+      <p><a href="./data/RICardo_sources.csv">RICardo_sources.csv</a></p>
     </div>
   </div>
 </div>
@@ -18,6 +19,7 @@
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'RIC_INTRO_TITLE' | translate }}</h2>
       <p>{{ 'RIC_PARA1' | translate }}</p>
+      <p><a href="./data/RICardo_RICentities.csv">RICardo_RICentities.csv</a></p>
     </div>
   </div>
 </div>
@@ -26,6 +28,7 @@
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'EXCHANGES_INTRO_TITLE' | translate }}</h2>
       <p>{{ 'EXCHANGES_PARA1' | translate }}</p>
+         <p><a href="./data/RICardo_exchange_rates.csv">RICardo_exchange_rates.csv</a></p>
     </div>
   </div>
 </div>
@@ -33,7 +36,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'OPEN_INTRO_TITLE' | translate }}</h2>
-      <p>{{ 'OPEN_PARA1' | translate }} <a href="https://github.com/medialab/ricardo" target="_blank">github</a>.</p>
+      <p>{{ 'OPEN_PARA1' | translate }} <a href="https://github.com/medialab/ricardo_data" target="_blank">github</a>.</p>
     </div>
   </div>
 </div>
