corrected data-table integration fixes #58

--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -180,6 +180,12 @@
         </div>
       </div>
     </div>
+    
+    
+  </div>
+</div>
+<div class="container">
+  <div class="row">
     <div class="col-sm-12 text-center shdt">
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
@@ -190,10 +196,11 @@
         </button>
       </div>
     </div>
-    <div ng-if="viewTable" class="row table-cont">
+  </div>
+  <div ng-if="viewTable" class="row table-cont">
       <div class="col-sm-12 grid-cont">
         <div class="gridStyle" ng-grid="gridOptions"></div>
       </div>
-    </div>
   </div>
 </div>
+
