--- a/client/css/style.css
+++ b/client/css/style.css
@@ -127,7 +127,7 @@ dt {
 }
 
 .btn-group {
-    margin: 2em 0 4em;
+    margin: 0em 0 0em;
 }
 
 .btn-default:hover {
@@ -1360,7 +1360,7 @@ h4 {
 }
 
 .shdt {
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
 }
 
 /*
