--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -36,10 +36,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="TranslateController">
         <li>
-          <a class="translateButtons" ng-click="changeLanguage('fr_FR')">Fr</a>
+          <a class="translateButtons" ng-click="changeLanguage('fr-FR')">Fr</a>
         </li>
         <li>
-          <a class="translateButtons" ng-click="changeLanguage('en_EN')">En</a>
+          <a class="translateButtons" ng-click="changeLanguage('en-EN')">En</a>
         </li>
       </ul>
     </div>
