some text updates

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -100,7 +100,7 @@
             {{"METADATA_MATRIX_INTRO_sourcetype_bilateral" | translate}}</span>
             <span ng-hide="bilateral">
             {{"METADATA_MATRIX_INTRO_sourcetype_world_0" | translate}}
-            <a href="" ng-click="goTo('/#worldTrade')"> Federico-Tena(2016)</a>
+            <a href="http://www.ehes.org/EHES_93.pdf" target="_blank"> Federico-Tena(2016)</a>
             {{"METADATA_MATRIX_INTRO_sourcetype_world_1" | translate}}
             </span>
             </span>
