number flows curve in metadata/World now count only world best guess flows for a better comparision with Federico Tena fixes #62

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -36,9 +36,7 @@
         {{ 'METADATA_NBFLOW_INTRO_BILATERAL' | translate }}
       </p>
       <p ng-hide="bilateral" class="paragraphPage">
-        {{ 'METADATA_NBFLOW_INTRO_WORLD_1' | translate }}
-        <em>World</em>
-        {{ 'METADATA_NBFLOW_INTRO_WORLD_2' | translate }}
+        {{ 'METADATA_NBFLOW_INTRO_WORLD' | translate }}
       </p>
       <div class="legend">
         <!-- 			 	<div ng-show="bilateral" class="legend-item">
@@ -46,7 +44,7 @@
           </div> -->
         <div ng-hide="bilateral" class="legend-item">
           <div class="square world"></div>
-          RICardo database
+          RICardo database (World Best Guess)
         </div>
         <div ng-hide="bilateral" class="legend-item">
           <div class="square federico"></div>
