update Licences (LGPL -> AGPL ; ODC-BY -> ODbL)

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -81,7 +81,7 @@
       <p>{{ 'HOME_SCIENCE_PARA1' | translate }}</p>
       <a href="https://github.com/medialab/ricardo">https://github.com/medialab/ricardo</a>
       <h4><strong>{{ 'HOME_SCIENCE_SUBTITLE2' | translate }}</strong></h4>
-      <p>{{ 'HOME_SCIENCE_PARA2' | translate }} <a href="https://opendatacommons.org/licenses/by/">https://opendatacommons.org/licenses/by/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
+      <p>{{ 'HOME_SCIENCE_PARA2' | translate }} <a href="http://opendatacommons.org/licenses/odbl/1.0/">http://opendatacommons.org/licenses/odbl/1.0/</a> <a href="https://github.com/medialab/ricardo_data">https://github.com/medialab/ricardo_data</a></p>
     </div>
   </div>
 </div>
