adding papers into the repo

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -69,10 +69,10 @@
       <p>{{ 'HOME_HOWTOCITE_LEAD' | translate }}</p>
       <h4><strong>{{ 'HOME_HOWTOCITE_SUBTITLE1' | translate }}</strong></h4>
       <p>{{ 'HOME_HOWTOCITE_PARA1' | translate }}</p>
-      <p>{{ 'HOME_HOWTOCITE_PARA11' | translate }} <a href="http://www.tandfonline.com/doi/citedby/10.1080/01615440.2016.1220269" target="_blank">the paper at Historical Methods</a> {{ 'HOME_HOWTOCITE_PARA111' | translate }} <a href="http://ricardo.medialab.sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf" target="_blank">our preprint version: 01-May-2016</a></p>
+      <p>{{ 'HOME_HOWTOCITE_PARA11' | translate }} <a href="http://www.tandfonline.com/doi/citedby/10.1080/01615440.2016.1220269" target="_blank">the paper at Historical Methods</a> {{ 'HOME_HOWTOCITE_PARA111' | translate }} <a href="/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf" target="_blank">our preprint version: 01-May-2016</a></p>
       <h4><strong>{{ 'HOME_HOWTOCITE_SUBTITLE2' | translate }}</strong></h4>
       <p>{{ 'HOME_HOWTOCITE_PARA2' | translate }}<br> <a href="http://dh2016.adho.org/abstracts/177" target="_blank">http://dh2016.adho.org/abstracts/177</a></p>
-      <p>{{ 'HOME_HOWTOCITE_PARA22' | translate }} <a href="http://medialab.github.io/ricardo" target="_blank">our presentation slides</a> {{ 'HOME_HOWTOCITE_PARA222' | translate }} <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf" target="_blank">l'abstract en français</a></p>
+      <p>{{ 'HOME_HOWTOCITE_PARA22' | translate }} <a href="http://medialab.github.io/ricardo" target="_blank">our presentation slides</a> {{ 'HOME_HOWTOCITE_PARA222' | translate }} <a href="/Girardetal_RICardo_dh2016_fr.pdf" target="_blank">l'abstract en français</a></p>
     </div>
     <div class="col-md-4">
       <h3 class="title-border">{{ 'HOME_SCIENCE_TITLE' | translate }}</h3>
