--- a/client/src/public/partials/bilateral.html
+++ b/client/src/public/partials/bilateral.html
@@ -227,9 +227,7 @@
   </div>
   <div ng-if="viewTable" class="row table-cont">
     <div class="col-sm-12 grid-cont">
-      <div class="gridStyle" ng-grid="gridOptions">
-        <div class="no-data" ng-hide="gridOptions.data.length && !loading"></div>
-      </div>
+      <div class="grid gridStyle" ui-grid="gridOptions" ui-grid-pagination></div>
     </div>
   </div>
 </div>
