--- a/client/src/public/partials/country.html
+++ b/client/src/public/partials/country.html
@@ -390,13 +390,7 @@
   </div>
   <div ng-if="viewTable" class="row table-cont">
     <div class="col-sm-12 grid-cont">
-      <div class="gridStyle" ng-grid="gridOptions">
-        <div class="grid-overlay-msg" ng-show="loading">
-          <div class="msg">
-            <span>Loading Data... <i class="fa fa-spinner fa-spin"></i></span>
-          </div>
-        </div>
-      </div>
+      <div class="grid gridStyle" ui-grid="gridOptions" ui-grid-pagination></div>
     </div>
   </div>
 </div>
