--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -226,7 +226,7 @@
   </div>
   <div ng-if="viewTable" class="row table-cont">
     <div class="col-sm-12 grid-cont">
-      <div class="gridStyle" ng-grid="gridOptions"></div>
+      <div class="grid gridStyle" ui-grid="gridOptions" ui-grid-pagination></div>
     </div>
   </div>
 </div>
