[client]: Permanent URL for bilateral #73

--- a/client/src/public/partials/bilateral.html
+++ b/client/src/public/partials/bilateral.html
@@ -87,7 +87,7 @@
           analytics-on="click"
           analytics-event="Bilateral target"
         ></inline-select-country>
-        - {{ 'FROM' | translate }}
+        {{ 'FROM' | translate }}
         <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
         {{ 'TO' | translate }}
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
