[client]: Styling for inline-select and muted text

--- a/client/src/public/css/style.css
+++ b/client/src/public/css/style.css
@@ -986,6 +986,9 @@ div.inline-select div.ui-select-choices-row:focus span {
   background-color: #e2ac13;
 }
 
+div.inline-select div.ui-select-match .text-muted {
+  padding-right: 15px;
+}
 /* END INLINE SELECT */
 
 .btnLineChart {
